# Bfrescox

./: .gitignore  .readthedocs.yml  Bfrescoxbandsdk.md  LICENSE  README.md
.github/workflows/: build_docs.yml  check_standards.yml  install_tox.sh  measure_coverage.yml  publish_book.yml  test_bfrescox_sdist.yml  test_bfrescoxpro_sdist.yml  test_book.yml
bfrescox_pypkg/: .coveragerc  .flake8  MANIFEST.in  pyproject.toml  setup.py  tox.ini
bfrescox_pypkg/meson/: meson.build
bfrescox_pypkg/src/bfrescox/: Configuration.py  __init__.py  _load_build_information.py  _parsing.py  _run_frescox_simulation.py  _utils.py  generate_elastic_template.py  generate_inelastic_template.py  information.py  load_tests.py  parallelization_setup.py  parse_fort16.py  print_information.py  run_simulation.py  test.py
bfrescox_pypkg/src/bfrescox/tests/: TestConfiguration.py  TestElasticSuite.py  TestInelasticSuite.py  TestInformation.py  TestPrintInformation.py  TestRunUserProvidedTemplates.py  TestTemplate.py  utils.py
bfrescoxpro_pypkg/: .coveragerc  .flake8  MANIFEST.in  pyproject.toml  setup.py  tox.ini
bfrescoxpro_pypkg/meson/: meson.build  meson.options
bfrescoxpro_pypkg/meson/subprojects/: frescox.wrap  packagefiles
bfrescoxpro_pypkg/src/bfrescoxpro/: Result.py  __init__.py  _fill_in_template.py  _load_build_information.py  information.py  load_tests.py  parse_differential_xs.py  parse_parallelization_setup.py  parse_performance_results.py  performance_results.py  print_information.py  run_simulation.py  test.py
bfrescoxpro_pypkg/src/bfrescoxpro/tests/: TestConfiguration.py  TestData  TestElasticSuite.py  TestInelasticSuite.py  TestInformation.py  TestPrintInformation.py  TestRunUserProvidedTemplates.py
book/: _config.yml  _toc.yml  intro.md
book/notebooks/: 12C_4He_inelastic_example.out  48Ca_Ozge_user_defined.in  48Ca_Ozge_user_defined.out  78Ni_p_elastic_example.out  78Ni_p_elastic_example.template  Elastic_from_template_example.ipynb  Inelastic_from_template_example.ipynb  Placeholder.ipynb  elastic_from_template_example.ipynb  fort.13  fort.156  fort.16  fort.17  fort.201  fort.202  fort.239  fort.3  fort.34  fort.35  fort.38  fort.39  fort.40  fort.45  fort.48  fort.56  fort.7  fort.75  fort.89  fort16.ipynb  frescox.in  inelastic_from_template_example.ipynb  user_provided_template_example.ipynb
book/notebooks/12C_4He_inelastic_example/: fort.13  fort.156  fort.16  fort.17  fort.201  fort.202  fort.239  fort.3  fort.34  fort.35  fort.38  fort.39  fort.40  fort.45  fort.48  fort.56  fort.7  fort.75  fort.89  frescox.in  frescox.out
book/notebooks/78Ni_p_elastic_example/: fort.13  fort.156  fort.17  fort.201  fort.239  fort.3  fort.34  fort.38  fort.39  fort.48  fort.56  fort.7  fort.89  frescox.in  frescox.out
book/notebooks/Ozge_template/: 48Ca_Ozge.template  fort.16  fort.201  fort.3  fort.48  frescox.in  frescox.out
common/: Configuration.py  README.md  Result.py  _fill_in_template.py  _load_build_information.py  _parsing.py  _run_frescox_simulation.py  _utils.py  generate_elastic_template.py  generate_inelastic_template.py  load_build_information.py  parallelization_setup.py  parse_differential_xs.py  parse_fort16.py  parse_parallelization_setup.py  parse_performance_results.py  performance_results.py  pyproject.toml  run_frescox_simulation.py
common/TestData/: 12C_4He_inelastic.template  12C_4He_inelastic_PointA.nml  12C_4He_inelastic_PointB.nml  12C_4He_inelastic_PointB_fort16.pkl  48Ca_Ozge.template  48Ca_OzgePointA.nml  48Ca_OzgePointA_differential_xs_baseline.csv  48Ca_OzgePointA_fort16.pkl  Ni78_p_elastic.template  Ni78_p_elastic_PointA.nml  Ni78_p_elastic_PointA_differential_xs_baseline.csv  Ni78_p_elastic_PointA_fort16.pkl  Ni78_p_elastic_PointB.nml  Ni78_p_elastic_PointB_differential_xs_baseline.csv  Ni78_p_elastic_PointB_fort16.pkl  README.md  TestSuite_Elastic.json  TestSuite_Inelastic.json  TestSuite_UserProvidedTemplate.json
common/templates/: elastic.template  inelastic.template
docs/: advanced_users.rst  api.rst  conf.py  contributing.rst  contributing_templates.rst  examples.rst  get_started.rst  index.rst  references.bib  sphinx_macros.json  templates.rst  tox_usage.rst
meson/: README.md  frescox.wrap
meson/packagefiles/frescox/: build_info.template  meson.build  meson.options
meson/packagefiles/frescox/source/: meson.build
